--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,9 +22,11 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
 
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
+      "@/*": [
+        "./src/*"
+      ]
     }
   },
   "include": ["src"]
